<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_camera"
        android:title="@string/camera"
        android:icon="@drawable/baseline_photo_camera_24"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/nav_search"
        android:title="@string/search"
        android:icon="@drawable/baseline_search_24"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/upload_photo"
        android:title="@string/upload_picture"
        android:icon="@drawable/baseline_add_circle_24"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/notifications"
        android:title="@string/notifications"
        android:icon="@drawable/baseline_notifications_24"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:icon="@drawable/baseline_question_answer_24"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/baseline_settings_24"
        app:showAsAction="ifRoom">
    </item>
</menu>